[gd_scene load_steps=5 format=3 uid="uid://brbowfxw7j6ot"]

[ext_resource type="Script" path="res://scenes/scripts/start_menu.gd" id="1_0kpya"]
[ext_resource type="Texture2D" uid="uid://btepcttr42vi3" path="res://icon.svg" id="1_gf1or"]
[ext_resource type="Shader" path="res://scenes/shaders/start_menu.gdshader" id="2_rm6go"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lq81u"]
shader = ExtResource("2_rm6go")

[node name="Start_Menu" type="Node2D"]
script = ExtResource("1_0kpya")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lq81u")
position = Vector2(579, 327)
scale = Vector2(10.1328, 6.25)
texture = ExtResource("1_gf1or")

[node name="SinglePlayer" type="Button" parent="."]
offset_left = 404.0
offset_top = 14.11
offset_right = 715.0
offset_bottom = 133.11
text = "Single player"

[node name="Co-op" type="Button" parent="."]
offset_left = 404.0
offset_top = 351.07
offset_right = 715.0
offset_bottom = 470.07
text = "Co-op"

[node name="multiplayer" type="Button" parent="."]
offset_left = 404.0
offset_top = 187.22
offset_right = 715.0
offset_bottom = 306.22
text = "Multi player"

[node name="End" type="Button" parent="."]
offset_left = 404.0
offset_top = 508.06
offset_right = 716.0
offset_bottom = 627.06
text = "Quit"

[connection signal="pressed" from="SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Co-op" to="." method="_on_start_pressed"]
[connection signal="pressed" from="multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="End" to="." method="_on_end_pressed"]
